--- a/Data Pipeline/scripts/requirements.txt
+++ b/Data Pipeline/scripts/requirements.txt
@@ -1,5 +1,26 @@
 # Core dependencies
-# transformers>=4.35.0
+# Python 3.11+
+# ffmpeg
+
+### Installing ffmpeg:
+*macOS:*
+bash
+brew install ffmpeg
+
+*Windows:*
+powershell
+choco install ffmpeg
+
+*Linux (Fedora):*
+bash
+sudo dnf install ffmpeg
+
+*Linux (Ubuntu/Debian):*
+bash
+sudo apt install ffmpeg
+
+
+transformers>=4.35.0
 # torch>=2.0.0
 # torchaudio>=2.0.0
 # accelerate>=0.20.0
@@ -8,12 +29,18 @@
 huggingface-hub>=0.16.0
 requests>=2.31.0
 
+#pillow
+
+
 # File handling and utilities
 opencv-python>=4.8.0
 numpy>=1.24.0
 packaging>=23.0
 filelock>=3.12.0
 pyyaml>=6.0
+PyYAML
+python-dateutil
+regex
 
 # Progress bars and utilities
 tqdm>=4.65.0
@@ -21,6 +48,8 @@ tqdm>=4.65.0
 # Optional: For better performance
 # sentencepiece>=0.1.99  # For some tokenizers
 # protobuf>=3.20.0       # For some models
+
+
 
 # Optional: For audio processing alternatives
 # librosa>=0.10.0        # Advanced audio processing
