--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,14 @@ __pycache__/
 *.pyc
 data/temp/
 data/output/
+venv/
+env/
+.env
+__pycache__/
+*.pyc
+*.pyo
+.pytest_cache/
+data/temp/
+data/output/
+logs/
+.DS_Store
