--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,16 @@ data/temp/
 data/output/
 logs/
 .DS_Store
+
+# Backend
+backend/venv/
+backend/__pycache__/
+
+# Frontend
+frontend/node_modules/
+frontend/.next/
+frontend/out/
+
+# Shared
+.env
+.env.local
