Add backend and frontend integration with docker-compose setup

--- a/airflow/airflow.cfg
+++ b/airflow/airflow.cfg
@@ -4,7 +4,7 @@
 #
 # Variable: AIRFLOW__CORE__DAGS_FOLDER
 #
-dags_folder = /Users/salmanbey/Documents/Northeastern /Fall 2025/MLOPS/airflow_pipeline/dags
+dags_folder = /Users/salmanbey/Documents/Northeastern /Fall 2025/MLOPS/MLOps-Project/airflow/dags
 
 # Hostname by providing a path to a callable, which will resolve the hostname.
 # The format is "package.function".
@@ -103,13 +103,13 @@ max_active_runs_per_dag = 16
 #
 # Variable: AIRFLOW__CORE__LOAD_EXAMPLES
 #
-load_examples = True
+load_examples = False
 
 # Path to the folder containing Airflow plugins
 #
 # Variable: AIRFLOW__CORE__PLUGINS_FOLDER
 #
-plugins_folder = /Users/salmanbey/Documents/Northeastern /Fall 2025/MLOPS/airflow_pipeline/plugins
+plugins_folder = /Users/salmanbey/Documents/Northeastern /Fall 2025/MLOPS/MLOps-Project/airflow/plugins
 
 # Should tasks be executed via forking of the parent process ("False",
 # the speedier option) or by spawning a new python process ("True" slow,
@@ -421,7 +421,7 @@ alembic_ini_file_path = alembic.ini
 #
 # Variable: AIRFLOW__DATABASE__SQL_ALCHEMY_CONN
 #
-sql_alchemy_conn = sqlite:////Users/salmanbey/Documents/Northeastern /Fall 2025/MLOPS/airflow_pipeline/airflow.db
+sql_alchemy_conn = sqlite:////Users/salmanbey/Documents/Northeastern /Fall 2025/MLOPS/MLOps-Project/airflow/airflow.db
 
 # Extra engine specific keyword args passed to SQLAlchemy's create_engine, as a JSON-encoded value
 #
@@ -543,7 +543,7 @@ check_migrations = True
 #
 # Variable: AIRFLOW__LOGGING__BASE_LOG_FOLDER
 #
-base_log_folder = /Users/salmanbey/Documents/Northeastern /Fall 2025/MLOPS/airflow_pipeline/logs
+base_log_folder = /Users/salmanbey/Documents/Northeastern /Fall 2025/MLOPS/MLOps-Project/airflow/logs
 
 # Airflow can store logs remotely in AWS S3, Google Cloud Storage or Elastic Search.
 # Set this to True if you want to enable remote logging.
@@ -720,7 +720,7 @@ log_processor_filename_template = {{ filename }}.log
 #
 # Variable: AIRFLOW__LOGGING__DAG_PROCESSOR_MANAGER_LOG_LOCATION
 #
-dag_processor_manager_log_location = /Users/salmanbey/Documents/Northeastern /Fall 2025/MLOPS/airflow_pipeline/logs/dag_processor_manager/dag_processor_manager.log
+dag_processor_manager_log_location = /Users/salmanbey/Documents/Northeastern /Fall 2025/MLOPS/MLOps-Project/airflow/logs/dag_processor_manager/dag_processor_manager.log
 
 # Name of handler to read task instance logs.
 # Defaults to use ``task`` handler.
@@ -1027,8 +1027,8 @@ enable_experimental_api = False
 # ("airflow.api.auth.backend.default" allows all requests for historic reasons)
 #
 # Variable: AIRFLOW__API__AUTH_BACKENDS
-#
-auth_backends = airflow.api.auth.backend.session
+
+auth_backends = airflow.api.auth.backend.basic_auth,airflow.api.auth.backend.session
 
 # Used to set the maximum page limit for API requests. If limit passed as param
 # is greater than maximum page limit, it will be ignored and maximum page limit value
@@ -1160,7 +1160,7 @@ access_denied_message = Access is Denied
 #
 # Variable: AIRFLOW__WEBSERVER__CONFIG_FILE
 #
-config_file = /Users/salmanbey/Documents/Northeastern /Fall 2025/MLOPS/airflow_pipeline/webserver_config.py
+config_file = /Users/salmanbey/Documents/Northeastern /Fall 2025/MLOPS/MLOps-Project/airflow/webserver_config.py
 
 # The base url of your website as airflow cannot guess what domain or
 # cname you are using. This is used in automated emails that
@@ -1840,7 +1840,7 @@ orphaned_tasks_check_interval = 300.0
 #
 # Variable: AIRFLOW__SCHEDULER__CHILD_PROCESS_LOG_DIRECTORY
 #
-child_process_log_directory = /Users/salmanbey/Documents/Northeastern /Fall 2025/MLOPS/airflow_pipeline/logs/scheduler
+child_process_log_directory = /Users/salmanbey/Documents/Northeastern /Fall 2025/MLOPS/MLOps-Project/airflow/logs/scheduler
 
 # Local task jobs periodically heartbeat to the DB. If the job has
 # not heartbeat in this many seconds, the scheduler will mark the
