--- a/.github/workflows/frontend_CI.yml
+++ b/.github/workflows/frontend_CI.yml
@@ -1,43 +1,186 @@
+# name: Frontend CI
+
+# on:
+#   push:
+#     branches: [ main, develop, feature/** ]
+#     paths:
+#       - 'frontend/**'
+#       - '.github/workflows/frontend-ci.yml'
+#   pull_request:
+#     branches: [ main ]
+
+# jobs:
+#   build-and-test:
+#     name: Build & Test Frontend
+#     runs-on: ubuntu-latest
+    
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v3
+      
+#       - name: Set up Docker Buildx
+#         uses: docker/setup-buildx-action@v2
+      
+#       - name: Build Docker image
+#         run: |
+#           cd frontend
+#           docker build -t pitchquest-frontend:test .
+      
+#       - name: Test Docker image starts
+#         run: |
+#           docker run -d --name test-frontend -p 3000:80 \
+#             pitchquest-frontend:test
+          
+#           sleep 10
+          
+#           # Test frontend serves content
+#           curl -f http://localhost:3000 || exit 1
+          
+#           docker stop test-frontend
+#           docker rm test-frontend
+      
+#       - name: Success
+#         run: echo "✅ Frontend Docker build successful!"
+
+
+
+# ============================================
+# FRONTEND CI WORKFLOW
+# Purpose: Automatically test and build frontend whenever code changes
+# ============================================
+
 name: Frontend CI
 
+# ============================================
+# TRIGGERS: When does this workflow run?
+# ============================================
 on:
   push:
+    # Run when code is pushed to these branches
     branches: [ main, develop, feature/** ]
+    # But ONLY if these files/folders changed
+    paths:
+      - 'frontend/**'                          # Any file in frontend folder
+      - '.github/workflows/frontend-ci.yml'    # Or this workflow file itself
+  
+  pull_request:
+    # Also run on Pull Requests to main
+    branches: [ main ]
     paths:
       - 'frontend/**'
-      - '.github/workflows/frontend-ci.yml'
-  pull_request:
-    branches: [ main ]
 
+# ============================================
+# JOBS: What tasks to run?
+# ============================================
 jobs:
+  # --------------------------------------------
+  # JOB 1: Build and Test Frontend
+  # --------------------------------------------
   build-and-test:
     name: Build & Test Frontend
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest    # Use GitHub's Ubuntu machine
     
     steps:
+      # STEP 1: Get the code from GitHub
       - name: Checkout code
         uses: actions/checkout@v3
+        # What this does: Downloads your repo to the test machine
+        # Like running: git clone https://github.com/your-repo
       
+      # STEP 2: Install Docker tools
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+        # What this does: Installs Docker with advanced features
+        # Allows building multi-platform images, caching, etc.
       
+      # STEP 3: Build the Docker image
       - name: Build Docker image
         run: |
           cd frontend
           docker build -t pitchquest-frontend:test .
+        # What this does: 
+        # - Goes into frontend folder
+        # - Runs: docker build (like docker compose up --build)
+        # - Tags image as "pitchquest-frontend:test"
+        # - Uses the Dockerfile in frontend/
+        #
+        # This catches:
+        # ✅ Missing files (like supabase.js)
+        # ✅ Dockerfile syntax errors
+        # ✅ Build dependency issues
+        # ✅ npm build failures
       
+      # STEP 4: Test that the container actually works
       - name: Test Docker image starts
         run: |
+          # Start the container in background (-d)
           docker run -d --name test-frontend -p 3000:80 \
             pitchquest-frontend:test
           
-          sleep 10
+          # Give it time to start (nginx is fast but let's be safe)
+          echo "Waiting for frontend to start..."
+          sleep 30
           
-          # Test frontend serves content
+          # Try to access the frontend
+          # -f flag means "fail if HTTP error"
+          echo "Testing if frontend is serving content..."
           curl -f http://localhost:3000 || exit 1
           
+          # If we get here, it worked! Clean up.
+          echo "✅ Frontend is responding!"
           docker stop test-frontend
           docker rm test-frontend
+        # What this does:
+        # - Starts your frontend container
+        # - Waits 10 seconds
+        # - Tries to fetch the homepage
+        # - If it fails (404, 500, can't connect), CI fails
+        # - If it succeeds, cleans up the container
+        #
+        # This catches:
+        # ✅ Container crashes on startup
+        # ✅ Nginx misconfiguration
+        # ✅ Missing build files
+        # ✅ Port issues
       
+      # STEP 5: Success message
       - name: Success
-        run: echo "✅ Frontend Docker build successful!"
+        run: |
+          echo "🎉 Frontend CI passed!"
+          echo "✅ Docker image built successfully"
+          echo "✅ Container started and served content"
+          echo "✅ Ready for deployment!"
+        # What this does:
+        # - Just prints a success message
+        # - Only runs if all previous steps passed
+        # - Shows up in the GitHub Actions logs
+
+# ============================================
+# WHAT HAPPENS IN REAL LIFE:
+# ============================================
+# 
+# 1. You change frontend/src/Home.jsx
+# 2. You run: git push origin feature/docker-containerization
+# 3. GitHub sees the push
+# 4. GitHub checks: "Did frontend/** files change?" → Yes!
+# 5. GitHub Actions starts this workflow
+# 6. Spins up a fresh Ubuntu machine
+# 7. Downloads your code
+# 8. Installs Docker
+# 9. Builds your frontend Docker image
+# 10. Starts the container
+# 11. Tests if it serves content
+# 12. If all pass: ✅ Shows green checkmark
+# 13. If any fail: ❌ Shows red X with error details
+#
+# ============================================
+# WHY THIS IS USEFUL:
+# ============================================
+#
+# ✅ Catches errors BEFORE deploying to production
+# ✅ Tests on a clean machine (not just "works on my computer")
+# ✅ Automatic - no manual testing needed
+# ✅ Every team member sees if their changes break things
+# ✅ Can't merge broken code to main (if you set up branch protection)
+#
+# ============================================
