--- a/frontend/nginx.standalone.conf
+++ b/frontend/nginx.standalone.conf
@@ -3,10 +3,23 @@ server {
     server_name _;
     root /usr/share/nginx/html;
     index index.html;
+    
+    # Allow large file uploads
+    client_max_body_size 100M;
 
     location / {
         try_files $uri $uri/ /index.html;
     }
-    
-    # No backend proxy in standalone mode
+
+    # Proxy API requests to backend
+    location /api {
+        proxy_pass http://backend:8000;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_read_timeout 300s;
+        proxy_connect_timeout 300s;
+        proxy_send_timeout 300s;
+        client_max_body_size 100M;
+    }
 }
